fixed issue with table running off container on small mobile screen

--- a/public/styles.css
+++ b/public/styles.css
@@ -135,6 +135,9 @@ main > div {
     max-width: 100%;
 }
 
+table {
+    font-size: 1.0em;
+}
 
 .dairyRow {
     border: 2px solid black;
